<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_title"
        android:textSize="24.0sp"  />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView android:text="@string/tv_name"/>
            <EditText
                android:id="@+id/et_name"
                android:layout_width="200dp"
                android:inputType="text"
                android:layout_span="4" />
        </TableRow>
        <TableRow>
            <TextView android:text="@string/tv_address" />
            <EditText
                android:id="@+id/et_address"
                android:layout_width="200dp"
                android:inputType="text"
                android:layout_span="4" />
        </TableRow>
        <TableRow>
            <TextView android:text="@string/tv_birthday" />
            <Spinner
                android:id="@+id/sp_month"
                android:layout_width="85dp"
                android:entries="@array/month" />
            <TextView android:text="@string/tv_month" />
            <Spinner
                android:id="@+id/sp_day"
                android:layout_width="85dp"
                android:entries="@array/day" />
            <TextView android:text="@string/tv_day" />
        </TableRow>
        <TableRow>
            <TextView android:text="@string/tv_gender" />
            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_span="4" >
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rb_male"
                    android:text="@string/tv_male" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rb_female"
                    android:text="@string/tv_female" />
            </RadioGroup>
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:stretchColumns="1" >
        <TableRow
            android:background="#003399" >
            <TextView
                android:layout_marginLeft="5dp"
                android:text="@string/tv_item"
                android:textColor="#FFFFFF" />
            <TextView
                android:layout_marginRight="5dp"
                android:text="@string/tv_number"
                android:textColor="#FFFFFF" />
        </TableRow>
        <TableRow>
            <CheckBox
                android:id="@+id/cb_apple"
                android:layout_width="160dp"
                android:text="@string/tv_apple" />
            <EditText
                android:id="@+id/et_apple"
                android:layout_marginRight="5dp"
                android:inputType="number" />
        </TableRow>
        <TableRow>
            <CheckBox
                android:id="@+id/cb_orange"
                android:layout_width="160dp"
                android:text="@string/tv_orange" />
            <EditText
                android:id="@+id/et_orange"
                android:layout_marginRight="5dp"
                android:inputType="number"/>
        </TableRow>
        <TableRow>
            <CheckBox
                android:id="@+id/cb_peach"
                android:layout_width="160dp"
                android:text="@string/tv_peach" />
            <EditText
                android:id="@+id/et_peach"
                android:layout_marginRight="5dp"
                android:inputType="number"/>
        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/bt_send"
        android:layout_gravity="center_horizontal"
        android:text="@string/bt_send" />
    
</LinearLayout>
